# vero_sim

./: .gitignore  README.md
src/: .rosinstall  .rosinstall.bak  INSTALL.md
src/dataspeed_can/: .hgtags  README.md  can_msgs_migration.md
src/dataspeed_can/.hg/: dirstate  undo.desc
src/dataspeed_can/dataspeed_can/: CHANGELOG.rst  package.xml
src/dataspeed_can/dataspeed_can_msg_filters/: CHANGELOG.rst  package.xml
src/dataspeed_can/dataspeed_can_msgs/: CHANGELOG.rst  package.xml
src/dataspeed_can/dataspeed_can_tools/: CHANGELOG.rst  package.xml
src/dataspeed_can/dataspeed_can_usb/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/dbw_mkz_ros/: .hgtags
src/dbw_mkz_ros/.hg/: dirstate  undo.desc  undo.dirstate
src/lusb/.hg/: dirstate
src/vero/: CMakeLists.txt  package.xml
src/vero/launch/: gazebo_world.launch  (+9 more)
src/vero_sim/: CMakeLists.txt  package.xml
src/vero_sim/launch/: dbw_mkz_gazebo_modified.launch  gazebo_world.launch  henrique.rviz  line_control_sim.launch  offline_rviz.launch  rafael.rviz  ransac_control.launch  ransac_corridor_control_test.launch  ransac_gazebo.launch  rviz.launch  rviz.rviz  vero_dbw_mkz_gazebo.launch  vero_ransac_test.launch  vero_sim.launch
src/vero_sim/src/: log2viz.cpp  vero2dbw.cpp
src/vero_sim/urdf/: cylinder.urdf.xacro  hokuyo.urdf.xacro  mkz.urdf.xacro  vero.urdf.xacro
src/vero_sim/worlds/: ball3.world  ball_loop.world  circle.world  circle3.world  holed_corridor.world  straight.world  straight2.world
src/vero_sim/worlds/cyl_wall/: model.config
src/vero_sim/yaml/: ransac.yaml  single_vehicle.yaml  vero.yaml
(+111 files in other folders)
