<?xml version="1.0"?>
<package>
  <name>vero_sim</name>
  <version>0.0.1</version>
  <description>A simulation package for the VERO Project</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="lukscasanova@gmail.com">Lucas Casanova Nogueira</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <run_depend>ransac_project</run_depend>
  <build_depend>ransac_project</build_depend>
  
  <run_depend>dbw_mkz_msgs</run_depend>
  <build_depend>dbw_mkz_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>





  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
